--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -4,7 +4,8 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="x-ua-compatible" content="ie=edge" />
-        <title>Modele</title>
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+        <title>UpDown Project</title>
     </head>
     <body>
         <div id="root"></div>
